修复6月9日bug，切换appId,准备提审

--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.0",
-	"appid": "wx1504da9badd36710",
+	"appid": "wx69533365adae8487",
 	"projectname": "shiancha-wechat",
 	"debugOptions": {
 		"hidedInDevtools": []
